--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
 		"intro.js": "^4.1.0",
 		"intro.js-react": "^0.6.0",
 		"js-cookie": "^3.0.1",
+		"lodash-es": "^4.17.21",
 		"lottie-react": "^2.1.0",
 		"moment": "2.29.4",
 		"postinstall-postinstall": "^2.1.0",
@@ -153,6 +154,7 @@
 		"@vanilla-extract/vite-plugin": "^3.7.0",
 		"@vitejs/plugin-react-swc": "^3.0.1",
 		"autoprefixer": "^10.4.8",
+		"esbuild": "^0.17.5",
 		"eslint": "^7.0.0",
 		"eslint-config-prettier": "^7.2.0",
 		"eslint-plugin-react": "^7.31.11",
