--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -24,6 +24,7 @@
 			"@util/*": ["./util/*"],
 			"@hooks/*": ["./hooks/*"],
 			"@pages/*": ["./pages/*"],
+			"@style/*": ["./style/*"],
 			"@routers/*": ["./routers/*"],
 			"@graph/*": ["./graph/generated/*"],
 			"@authentication/*": ["./authentication/*"],
